# momentspp

./: CMakeLists.txt  Dockerfile  INSTALL.md  INSTALL.txt  README.md
.github/workflows/: docker.yml
benchmarking/: .Rhistory  bench_2-pop_moments.csv  bench_2-pop_params.csv  bench_params.csv  bench_python.csv  model_1.yaml  model_2.yaml  model_3.yaml  model_4.yaml  model_5.yaml  model_6.yaml  opt.bpp  opt_1.bpp  opt_2.bpp  opt_3.bpp  opt_4.bpp  opt_5.bpp  params_1_pop.csv  params_2_pops.csv  pops_1.bpp  pops_2.bpp  pops_3.bpp  pops_4.bpp  pops_5.bpp  run_bench.py  sim_sel.bpp
benchmarking/accuracy/: bench_1-pop_moments.csv  bench_2-pop_moments.csv  eigenvals.txt  steadY_tbl.tsv
benchmarking/multi_epoch/: model_1.yaml  model_10.yaml  model_11.yaml  model_12.yaml  model_15.yaml  model_5.yaml  model_6.yaml  model_7.yaml  model_8.yaml  model_9.yaml  opt.bpp
benchmarking/one_epoch/: model_1.yaml  model_10.yaml  model_11.yaml  model_12.yaml  model_2.yaml  model_3.yaml  model_4.yaml  model_5.yaml  model_6.yaml  model_7.yaml  model_8.yaml  model_9.yaml
debug/: model_1.yaml  model_1a.yaml  model_1a_expectations.txt  model_1b.yaml  model_1b_expectations.txt  model_2.yaml  model_242.yaml  model_3.yaml  model_39.yaml  model_4.yaml  model_5.yaml  model_6.yaml  model_7.yaml  moments++_expectations.txt  opt.bpp  opt_1.bpp  opt_12.bpp  opt_15.bpp  opt_2.bpp  opt_3.bpp  opt_4.bpp  opt_8.bpp  pops.tsv  pops_1.bpp  pops_12.bpp  pops_15.bpp  pops_2.bpp  pops_3.bpp  pops_4.bpp  pops_8.bpp  run_mpp.sh  sim_neut.bpp  sim_sel.bpp  test.yaml  tls_test_1.txt
debug/model_1/: 200_expectations.txt  200_steady-state.txt  220_expectations.txt  220_steady-state.txt  240_expectations.txt  240_steady-state.txt  250_expectations.txt  250_steady-state.txt  266_expectations.txt  266_steady-state.txt  300_expectations.txt  300_steady-state.txt  400_expectations.txt  400_steady-state.txt  model_1.yaml  opt.bpp
debug/model_2/: 20_expectations.txt  20_steady-state.txt  22_expectations.txt  22_steady-state.txt  24_expectations.txt  24_steady-state.txt  25_expectations.txt  25_steady-state.txt  26_expectations.txt  26_steady-state.txt  30_expectations.txt  30_steady-state.txt  40_expectations.txt  40_steady-state.txt  model_2.yaml  opt.bpp
debug/model_3/: 2_expectations.txt  2_steady-state.txt  3_expectations.txt  3_steady-state.txt  4_expectations.txt  4_steady-state.txt  model_3.yaml  opt.bpp
debug/model_4/: 200_expectations.txt  200_steady-state.txt  220_expectations.txt  220_steady-state.txt  240_expectations.txt  240_steady-state.txt  250_expectations.txt  250_steady-state.txt  266_expectations.txt  266_steady-state.txt  300_expectations.txt  300_steady-state.txt  400_expectations.txt  400_steady-state.txt  model_4.yaml
debug/model_5/: 20_expectations.txt  20_steady-state.txt  22_expectations.txt  22_steady-state.txt  24_expectations.txt  24_steady-state.txt  25_expectations.txt  25_steady-state.txt  26_expectations.txt  26_steady-state.txt  30_expectations.txt  30_steady-state.txt  40_expectations.txt  40_steady-state.txt  model_5.yaml  opt.bpp
debug/model_6/: 2_expectations.txt  2_steady-state.txt  3_expectations.txt  3_steady-state.txt  4_expectations.txt  4_steady-state.txt  model_6.yaml
doc/: README.md  init_parameters.bpp  opt.bpp
doc/example/: README.md  REAMDE.md  demes.yaml  init_parameters.bpp  opt.bpp  run_mpp.sh  test_model.yaml
doc/examples/: README.md
poster/: .Rhistory  sel_models.csv
poster/bottleneck/: model_1.yaml  model_10.yaml  model_11.yaml  model_12.yaml  model_13.yaml  model_14.yaml  model_15.yaml  model_16.yaml  model_17.yaml  model_18.yaml  model_19.yaml  model_2.yaml  model_20.yaml  model_21.yaml  model_22.yaml  model_23.yaml  model_24.yaml  model_25.yaml  model_26.yaml  model_27.yaml  model_28.yaml  model_29.yaml  model_3.yaml  model_30.yaml  model_4.yaml  model_5.yaml  model_6.yaml  model_7.yaml  model_8.yaml  model_9.yaml
poster/constant/: m10_100_expectations.txt  m10_100_steady_state.txt  m10_10_steady_state.txt  m10_20_expectations.txt  m10_20_steady_state.txt  m10_2_steady_state.txt  m10_5_steady_state.txt  m10_py.txt  m11_100_expectations.txt  m11_100_steady_state.txt  m11_10_expectations.txt  m11_20_expectations.txt  m11_20_steady_state.txt  m11_5_expectations.txt  m11_py.txt  m12_100_steady_state.txt  m12_10_expectations.txt  m12_10_steady_state.txt  m12_20_expectations.txt  m12_20_steady_state.txt  m12_2_expectations.txt  m12_5_steady_state.txt  m12_py.txt  m13_100_expectations.txt  m13_100_steady_state.txt  m13_10_expectations.txt  m13_10_steady_state.txt  m13_20_steady_state.txt  m13_5_expectations.txt  m13_5_steady_state.txt  m13_py.txt  m14_100_expectations.txt  m14_100_steady_state.txt  m14_10_expectations.txt  m14_20_steady_state.txt  m14_2_expectations.txt  m14_2_steady_state.txt  m14_5_expectations.txt  m14_py.txt  (+225 more)
src/: AbstractOperator.cpp  AbstractOperator.hpp  Admixture.cpp  Admixture.hpp  BackupListenerOv.cpp  BackupListenerOv.hpp  CMakeListas.txt  CMakeLists.txt  Data.cpp  Data.hpp  DdMoment.hpp  Demes.cpp  Demes.hpp  DrMoment.hpp  Drift.cpp  Drift.hpp  DzMoment.hpp  EigenDecomposition.hpp  Epoch.cpp  Epoch.hpp  Graph.cpp  Graph.hpp  HashNode.h  HashTable.cpp  HashTable.h  HetMoment.hpp  Log.cpp  Log.hpp  Matrix.cpp  Matrix.hpp  Migration.cpp  Migration.hpp  Model.cpp  Model.hpp  Moment.hpp  Mutation.cpp  Mutation.hpp  NeutralAdmixture.cpp  NeutralAdmixture.hpp  NeutralMigration.cpp  (+25 more)
test/: README  model_1_e_0_O_25_transitions.csv  model_1_e_0_op_0.csv  model_1_e_0_op_3.csv  opt.bpp
tools/: 1_pop_momentsLD.py  bench_1-pop.Rmd  benchmarking.R  benchmarking.Rmd  benchmarking_demes.Rmd  bgs_landscapes.R  bgs_linear_models.R  bgs_lm.R  bgs_maps.R  bgs_pi.R  bgs_viz.R  compress_admixture_py.py  compute_pi.R  emp_lm.R  emp_mmap.R  empirical_maps.Rmd  ld_from_two_locus_spectrum_py.py  moments.nb  paper_1.analyses.R  poster.R  process_roulette.py  pulse_migration.nb  run_momentsLD.py  run_mpp.sh  setup_models.Rmd  setup_models_1.Rmd  sim.R  simulate_two_loc_B.py  two-locus-moments-selection.nb  two-population-migration.nb
tools/R/: bgs_lm.R  (+23 more)
(+2628 files in other folders)
